--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>AutoGrader</title>
   <link rel="stylesheet" , href="./css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" href="./img/favicon.png">
 </head>
 
